--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "brace": "^0.11.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "eslint": "eslint *.js"
   },
   "repository": {
     "type": "git",
@@ -24,5 +25,8 @@
   "bugs": {
     "url": "https://github.com/os-js/osjs-ace-application/issues"
   },
-  "homepage": "https://github.com/os-js/osjs-ace-application#readme"
+  "homepage": "https://github.com/os-js/osjs-ace-application#readme",
+  "devDependencies": {
+    "eslint": "^5.1.0"
+  }
 }
