--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "dependencies": {
     "@osjs/common": "^3.0.0-alpha.11",
     "@osjs/gui": "^3.0.0-alpha.21",
-    "brace": "^0.11.1"
+    "brace": "^0.11.1",
+    "hyperapp": "^1.2.8"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
