--- a/package.json
+++ b/package.json
@@ -4,20 +4,22 @@
   "osjs": {
     "type": "package"
   },
-  "dependencies": {
-    "@osjs/common": "^3.0.0-alpha.11",
-    "@osjs/gui": "^3.0.0-alpha.21",
-    "brace": "^0.11.1",
-    "hyperapp": "^1.2.8"
-  },
+  "dependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "eslint": "eslint *.js"
+    "eslint": "eslint *.js",
+    "build": "webpack",
+    "watch": "webpack --watch",
+    "prepublishOnly": "npm run eslint && rm ./dist/* && npm run build"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/os-js/osjs-ace-application.git"
   },
+  "files": [
+    "dist/",
+    "metadata.json"
+  ],
   "keywords": [
     "osjs"
   ],
@@ -28,6 +30,18 @@
   },
   "homepage": "https://github.com/os-js/osjs-ace-application#readme",
   "devDependencies": {
-    "eslint": "^5.1.0"
+    "@babel/core": "^7.0.0-beta.54",
+    "@babel/plugin-transform-runtime": "^7.0.0-beta.54",
+    "@babel/preset-env": "^7.0.0-beta.54",
+    "@babel/runtime": "^7.0.0-beta.54",
+    "@osjs/gui": "^3.0.0-alpha.30",
+    "@osjs/common": "^3.0.0-alpha.16",
+    "babel-loader": "^8.0.0-beta.4",
+    "copy-webpack-plugin": "^4.5.2",
+    "eslint": "^5.1.0",
+    "hyperapp": "^1.2.0",
+    "webpack": "^4.16.2",
+    "webpack-cli": "^3.1.0",
+    "brace": "^0.11.1"
   }
 }
