--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@osjs/ace-application",
+  "description": "OS.js v3 Ace Editor Application",
   "version": "1.1.0",
   "osjs": {
     "type": "package"
