--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "eslint": "eslint *.js",
     "build": "webpack",
     "watch": "webpack --watch",
-    "prepublishOnly": "NODE_ENV=production npm run eslint && rm ./dist/* && npm run build"
+    "prepublishOnly": "npm run eslint && rm ./dist/* && NODE_ENV=production webpack"
   },
   "repository": {
     "type": "git",
