--- a/package.json
+++ b/package.json
@@ -35,14 +35,14 @@
     "@babel/plugin-transform-runtime": "^7.0.0-beta.54",
     "@babel/preset-env": "^7.0.0-beta.54",
     "@babel/runtime": "^7.0.0-beta.54",
-    "@osjs/gui": "^3.0.0-alpha.30",
     "@osjs/common": "^3.0.0-alpha.16",
+    "@osjs/gui": "^3.0.0-alpha.32",
     "babel-loader": "^8.0.0-beta.4",
+    "brace": "^0.11.1",
     "copy-webpack-plugin": "^4.5.2",
     "eslint": "^5.1.0",
     "hyperapp": "^1.2.0",
     "webpack": "^4.16.2",
-    "webpack-cli": "^3.1.0",
-    "brace": "^0.11.1"
+    "webpack-cli": "^3.1.0"
   }
 }
