--- a/package.json
+++ b/package.json
@@ -31,18 +31,18 @@
   },
   "homepage": "https://github.com/os-js/osjs-ace-application#readme",
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.54",
-    "@babel/plugin-transform-runtime": "^7.0.0-beta.54",
-    "@babel/preset-env": "^7.0.0-beta.54",
-    "@babel/runtime": "^7.0.0-beta.54",
-    "@osjs/common": "^3.0.0-alpha.16",
-    "@osjs/gui": "^3.0.0-alpha.32",
+    "@babel/core": "^7.0.0-rc.1",
+    "@babel/plugin-transform-runtime": "^7.0.0-rc.1",
+    "@babel/preset-env": "^7.0.0-rc.1",
+    "@babel/runtime": "^7.0.0-rc.1",
+    "@osjs/common": "^3.0.0-alpha.17",
+    "@osjs/gui": "^3.0.0-alpha.33",
     "babel-loader": "^8.0.0-beta.4",
     "brace": "^0.11.1",
     "copy-webpack-plugin": "^4.5.2",
-    "eslint": "^5.1.0",
+    "eslint": "^5.4.0",
     "hyperapp": "^1.2.0",
-    "webpack": "^4.16.2",
+    "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0"
   }
 }
