--- a/package.json
+++ b/package.json
@@ -44,5 +44,24 @@
     "hyperapp": "^1.2.9",
     "webpack": "^4.28.3",
     "webpack-cli": "^3.2.0"
+  },
+  "eslintConfig": {
+    "env": {
+      "browser": true,
+      "node": true
+    },
+    "parserOptions": {
+      "sourceType": "module"
+    },
+    "extends": "@osjs/eslint-config"
+  },
+  "babel": {
+    "presets": [
+      ["@babel/preset-env", {
+      }]
+    ],
+    "plugins": [
+      "@babel/plugin-transform-runtime"
+    ]
   }
 }
